This file contain the log of changes for the main development branch (trunk).
More detailed information about incremental changes can be found in the
history management of subversion.

2015-xx-yy releases/3.12.4
        - fix to use regularized Hessian when doing a curvature test without
          ineration information (neg_curv_test_tol > 0), new option 
          neg_curv_test_reg to switch back to original behavior
          (by N.-Y. Chang and V. Zavala Tejeda) [r2579]
        
2015-04-15 releases/3.12.3 and releases/3.11.11
        - fixed bug in MA97 interface that lead to conversion issues
          (by J. Hogg) [r2566, #260]

2015-04-04 releases/3.12.2
        - revised integration of doxygen documentation into build system
           (by Ted Ralphs)

2015-02-13 releases/3.12.1
        - fixes to build system for dependency linking and library versioning
        - Ipopt will now report an NLP with inconsistent variable bounds
          or inconsistent constraints sides as infeasible instead of
          throwing an invalid TNLP exception (by T. Kelman) [r2548]

2015-01-23 releases/3.12.0
        - Library dependencies are now recorded in shared library builds,
          which is intended to simplify linking against the Ipopt library.
          However, the pkg-config and ipopt_addlibs files do not reflect
          this change yet (it is rather experimental, imho). To restore
          the previous behavior, use --disable-dependency-linking as
          configure option. In case of problems, contact Ted Ralphs.
        - If linking against Intel MKL for Blas/lapack, use of Pardiso
          from MKL is now automatically enabled. Note, that this will
          change the default solver on Ipopt builds without any of the
          linear solvers MA27, MA57, MA97, and MA86 (these take preference
          over Pardiso). [#216]
        - dropped support for old HSL sources (<2013; ThirdParty/HSLold)