@@ -53,13 +53,13 @@ int main(int argv, char**argc)
   printf("#-------------------------------------------\n");
   printf("# Sensitivity without bound checking\n");
   printf("#-------------------------------------------\n");
-  app_sens->Run();
 
+  app_sens->Run();
+  
   printf("\n");
   printf("#-------------------------------------------\n");
   printf("# Sensitivity with bound checking\n");
   printf("#-------------------------------------------\n");
   app_ipopt->Options()->SetStringValue("sens_boundcheck", "yes");
   app_sens->Run();
-
 }
